# idra-franka-launch

./: README.md
.github/workflows/: webpage.yml
franka_mm_control/: CMakeLists.txt  franka_mm_control.xml  package.xml
franka_mm_control/config/: basic_controllers.yaml  controllers.yaml  controllers_ros.yaml
franka_mm_control/include/franka_mm_control/: pose_reader.hpp  position_reader.hpp
franka_mm_control/scripts/: cart_impedance_test.py  cart_pos_test.py  cart_vel_test.py  effort_test.py  position_test.py  velocity_test.py
franka_mm_control/src/: pose_reader.cpp  position_reader.cpp
franka_mm_hardware_interface/: CMakeLists.txt  franka_mm_hardware_interface.xml  package.xml
franka_mm_hardware_interface/include/franka_mm_hardware_interface/: control_modes.hpp  franka_mm_hardware_interface.hpp  franka_param_service_server.hpp  franka_wrapper.hpp  interfaces.hpp  lambda_control.hpp  mode_switch_plan.hpp
franka_mm_hardware_interface/src/: franka_mm_hardware_interface.cpp  franka_param_service_server.cpp  franka_wrapper.cpp  lambda_control.cpp  mode_switch_plan.cpp
idra_franka_launch/: CMakeLists.txt  package.xml
idra_franka_launch/launch/: bimanual.launch.py  franka1.launch.py  franka2.launch.py
idra_franka_launch/rviz/: bimanual.rviz
idra_franka_launch/scripts/: coffee_tray.py  gear_pick.py  gripper_grasp_test.py  gripper_homing_test.py  stiffness_test.py
idra_franka_launch/urdf/: bimanual.urdf.xacro
webdocs/: diagram.puml  doxyfile  homepage.md  index.html  report.tex
webdocs/static/css/: style.css
webdocs/static/js/: main.js
