cmake_minimum_required(VERSION 3.8)
project(franka_mm_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(controller_interface REQUIRED)
find_package(hardware_interface REQUIRED)
find_package(pluginlib REQUIRED)
find_package(franka_mm_hardware_interface REQUIRED)

include_directories(
  include
)

add_library(${PROJECT_NAME} SHARED 
  src/position_reader.cpp
  src/pose_reader.cpp
)

target_include_directories(
  ${PROJECT_NAME}
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
    ${franka_mm_hardware_interface_INCLUDE_DIRS}
)

ament_target_dependencies(${PROJECT_NAME} rclcpp std_msgs controller_interface hardware_interface pluginlib)

# Install the library
install(
  TARGETS ${PROJECT_NAME}
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

install(
  PROGRAMS
    scripts/position_test.py
    scripts/velocity_test.py
    scripts/effort_test.py
    scripts/cart_pos_test.py
    scripts/cart_vel_test.py
    scripts/cart_impedance_test.py
  DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY config
  DESTINATION share/${PROJECT_NAME}
)

# Install headers
install(
  DIRECTORY include/
  DESTINATION include
)

pluginlib_export_plugin_description_file(controller_interface franka_mm_control.xml)

ament_package()