<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>idra_franka_launch</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="matteo.dallevedove@unitn.it">Matteo Dalle Vedove</maintainer>
  <maintainer email="luca.beber@unitn.it">Luca Beber</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>franka_bringup</exec_depend>
  <exec_depend>franka_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
